# cpp-database

./: .gitignore  CMakeLists.txt  DataBase.h  arithm_parser.cpp  boolcell.cpp  bytearraycell.cpp  cell.cpp  database.cpp  demo.cpp  factory.cpp  intcell.cpp  parsers.cpp  stringcell.cpp  table.cpp
.github/workflows/: wf_tests.yml
flex/lib/: libfl.la  libfl.so.2.0.0
include/: ArithmParcer.h  Cell.h  ColumnInfo.h  Condition.h  Creator.h  DataBase.h  Expression.h  FuncParser.h  PRNCompiler.h  Row.h  Table.h  Token.h  Types.h
src/: arithmparser.cpp  condition.cpp  creator.cpp  database.cpp  expression.cpp  factory.cpp  funcparser.cpp  funcparser.l  prncompiler.cpp  row.cpp  table.cpp  token.cpp
src/cells/: boolcell.cpp  bytearraycell.cpp  cell.cpp  intcell.cpp  stringcell.cpp
tests/: CMakeLists.txt  sampletest.cpp
tests/src/: cell_ops_test.cpp  read_value_test.cpp
